--- a/ll_env/pyvenv.cfg
+++ b/ll_env/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Program Files\Python312
 include-system-site-packages = false
-version = 3.12.1
-executable = C:\GIT\pythonProject\Learning-Log\.venv\Scripts\python.exe
-command = C:\GIT\pythonProject\Learning-Log\.venv\Scripts\python.exe -m venv C:\GIT\pythonProject\Learning-Log\ll_env
+version = 3.12.2
+executable = C:\GIT\pythonProject\Learning-Log\ll_env\Scripts\python.exe
+command = C:\GIT\pythonProject\Learning-Log\ll_env\Scripts\python.exe -m venv C:\GIT\pythonProject\Learning-Log\ll_env
